[package]
name = "imagegen-mini-app"
version = "0.1.2"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
